--- a/src/scss/block/catalog.scss
+++ b/src/scss/block/catalog.scss
@@ -35,7 +35,6 @@
     margin-bottom: 30px;
 
     opacity: 0;
-    transform: translateY(120%);
   }
 
   &__filter {
