--- a/src/scss/block/product.scss
+++ b/src/scss/block/product.scss
@@ -48,7 +48,6 @@
     gap: 15px;
 
     opacity: 0;
-    transform: translateY(60px);
 
     & span {
       display: block;
@@ -75,7 +74,6 @@
 
   &__variant {
     opacity: 0;
-    transform: translateY(60px);
   }
 
   &__volume {
@@ -126,7 +124,6 @@
     gap: 30px;
 
     opacity: 0;
-    transform: translateY(60px);
   }
 
   &__buy {
@@ -150,7 +147,6 @@
     z-index: 10;
 
     opacity: 0;
-    transform: translateY(60px);
   }
 
   &__btn {
@@ -186,7 +182,6 @@
 
   &__about {
     opacity: 0;
-    transform: translateY(60px);
   }
 }
 
